welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:3: error: x is already defined as variable x
	var x: Int=nums(0)
            ^extrema:7: error: not found: value y
		if (nums(i)<y)
                            ^extrema:8: error: not found: value y
		y=nums(i)
                ^extrema:10: error: not found: value y
	return (x-y) 
                  ^