welcome.lessons.welcome.array.maxvalue.Extrema.scala.code
def extrema(nums:Array[Int]): Int = {
	var x :Int=nums(0)
	var x: Int=nums(0)
	for(i<- 1 to nums.length-1) {
		if (nums(i)>x)
		x=nums(i)
		if (nums(i)<y)
		y=nums(i)
	}
	return (x-y) 
	
}
